<resources>
    <string name="app_name">PraticaDePreferencias</string>
    <string name="settings">Configurações</string>
    <string name="pref_key_name">pref_name</string>
    <string name="pref_title_name">Nome</string>
    <string name="pref_key_age">pref_age</string>
    <string name="pref_title_age">Idade</string>
    <string name="pref_title_height">Altura</string>
    <string name="pref_title_email">E-mail</string>
    <string name="pref_key_email">pref_email</string>
    <string name="pref_key_height">pref_height</string>
    <string name="pref_key_lazy">pref_lazy</string>
    <string name="pref_title_lazy">Preguiçoso?</string>
</resources>
